# python-sdk

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  pytest.ini
docs/: ADVANCED.md  API.md  EXAMPLES.md
stendly/: __init__.py  _http.py  client.py  exceptions.py  models.py
stendly/namespaces/: __init__.py  intents.py  merchant.py  terminals.py  webhooks.py
tests/: conftest.py  test_sdk.py
