[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stendly"
version = "0.2.0"
description = "Python SDK for Stendly API - Non-custodial payments on Solana"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Stendly Team", email = "dev@stendly.com" }
]
keywords = ["stendly", "payments", "solana", "usdc", "crypto", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business :: Financial",
  "Topic :: Security :: Cryptography",
]

dependencies = [
  "httpx[http2]>=0.27.0,<1.0",
  "pydantic>=2.7.0,<3.1",
  "typing-extensions>=4.5.0; python_version<'3.10'",
]

[project.urls]
Homepage = "https://stendly.com"
Documentation = "https://docs.stendly.com/sdk/python"
Repository = "https://github.com/stendly-dev/python-sdk"
Changelog = "https://github.com/stendly-dev/python-sdk/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["stendly*"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["stendly"]

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "N", # pep8-naming
  "UP", # pyupgrade
  "S", # flake8-bandit
  "A", # flake8-builtins
  "COM", # flake8-commas
  "ISC", # flake8-implicit-str-concat
  "PT", # flake8-pytest-style
]
ignore = [
  "E501", # line too long (handled by formatter)
  "B008", # function-call-in-default-argument
  "S101", # assert used (for testing)
  "PT004", # fixtures must be课的
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers --tb=short"
asyncio_mode = "strict"

[tool.coverage.run]
source = ["stendly"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
